Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 80
      name: http-80
      targetPort: 8082
  selector:
    app: myapp
