Virtserv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
    - "*"
  gateways:
    - service-gw
  http:
    - match:
        - uri:
            exact: /service
      rewrite:
        uri: /
      route:
        - destination:
            host: service
            port:
              number: 80
